[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "voxly"
authors = [{name = "Michael Käser", email = "info@mickare.de"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["voxel", "chunk", "3d", "point", "cloud"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10.0,<4"
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://github.com/mickare/voxly"
Source = "https://github.com/mickare/voxly"

[project.optional-dependencies]
test = [
    "pytest >=6.2.4,<7",
    "pytest-cov",
    "mypy ==0.931",
    "flake8 >=3.8.3,<4",
    "pylint >=2.12.2,<3",
    "black ~=22.1,<23.0",
    "bandit ~=1.7,<2.0" 
]
doc = ["sphinx"]


[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = []